@@ -1,0 +1,9 @@
+{{# brad }}
+   {{> test-link }}
+{{/ brad }}
+{{# dave }}
+   {{> test-link }}
+{{/ dave }}
+{{# brian }}
+   {{> test-link }}
+{{/ brian }}
